Modify FileScanner